--- a/style.css
+++ b/style.css
@@ -5,16 +5,39 @@
 }
 
 body {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: black;
+}
+
+#logo{
+  margin: 10px 0 10px;
+}
+
+#background{
+  width: 100vw;
   height: 100vh;
+  position: absolute;
+  opacity: 0.7;
+}
+
+.calculator{
+  position: relative;
+}
+
+.calculator h1{
+  font-family: 'Source Code Pro';
+  font-weight: 400;
+  color: #d9d9d9;
+  font-size: 40px;
 }
 
 #calculator {
   width: 356px;
   height: 511.28px;
-  background: #341B5E;
+  background: #062e31d0;
   border-radius: 10px;
   padding: 0px 8px;
 }
@@ -52,6 +75,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .column{
   display: flex;
   flex-direction: column;
@@ -70,12 +94,25 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #341B5E;
+  color: #1f1e22;
+}
+
+#equalSign{
+  height: 136.24px;
 }
 
 .key:hover{
   cursor: default;
-  background-color: #eee48c;
+  background-color: #afe2ca;
   transition: 0.2s;
 }
 
+#divGithub{
+  display: flex;
+  justify-content: center;
+}
+
+#githubImg{
+  margin-top: 15px;
+  width: 40px;
+}
