--- a/style.css
+++ b/style.css
@@ -5,26 +5,27 @@
 }
 
 body {
-  height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
   background-color: black;
+  height: 100vh;
 }
 
 #logo{
-  margin: 10px 0 10px;
+  padding: 20px 0 10px;
 }
 
 #background{
+  object-fit: cover;
   width: 100vw;
   height: 100vh;
-  position: absolute;
-  opacity: 0.7;
+  position: fixed;
+  opacity: 0.7;  
 }
 
 .calculator{
   position: relative;
+  z-index: 1;
 }
 
 .calculator h1{
